# nvidia_hackathen_2025

./: main.py  pyproject.toml
hackathon_aiqtoolkit/: install.sh  tavily_mcp_server.py
hackathon_aiqtoolkit/NeMo-Agent-Toolkit/: start.sh
hackathon_aiqtoolkit/NeMo-Agent-Toolkit/configs/: hackathon_config.yml
hackathon_aiqtoolkit/configs/: hackathon_config.yml  tavily_mcp_config.yml
things_mcp/: INSTALL.md  README.md  add_item_direct.py  client_example.py  mcp_config.json  pyproject.toml  quick_test.py  requirements.txt  run_server.py  setup.py  start.sh  test_things_mcp.py  things.db  things_mcp_server.py
